src/test/deca/syntax/valid/Objet/ListClasses-Meth-1Param.deca
// Description:
//      Syntaxically correct program with classes with attributes and empty methods
//
// Result:
//      nothing
//
// History:
//      Created in 17/1/2022

class A {
    int x;
    protected boolean x;
    void test(int x) {
    }
    void test2(int y) {
    }
}

class B {
    boolean x = true;
    protected boolean x;
    void test(boolean x) {
    }
}