src/test/deca/syntax/invalid/Objet/ListClasses-TypoClass.deca
// Description:
//      Syntaxically incorrect program
//
// Result:
//      Parsing error on line 10
//
// History:
//      Created in 17/1/2022

Class A {
    int x;
    protected boolean x;
}